[package]
name = "tauri-plugin-clipboard"
version = "2.1.11"
license = "MIT"
description = "A clipboard plugin for Tauri that supports text, html, rtf, files and image, as well as clipboard update listening."
authors = [ "Huakun" ]
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-clipboard"
repository = "https://github.com/CrossCopy/tauri-plugin-clipboard"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tauri = { version = "2.0.1" }
serde = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
image = "0.25.1"
clipboard-rs = "0.2.1"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
